# AICrewDev

./: .env.example  .gitignore  ENHANCEMENT_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  NATURAL_LANGUAGE_CLI.md  OLLAMA_USAGE_GUIDE.md  PHASE_1_COMPLETE.md  README.md  TERMINAL_ERROR_RESOLUTION.md  demo.py  natural_language_cli.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_comprehensive.py  test_config.py  test_fixed_crew.py  validate_config.py
a_simple/: .env.example  .gitignore  README.md  requirements.txt
config/: agents.yaml.example
docs/: ADVANCED_GUIDE.md  architecture.md  getting_started.md  llm_configuration.md
examples/: AsyncDemo.py  BasicUsageTest.py  SimpleOllamaDemo.py  async_agents_demo.py  docker_free_ollama_main.py  enhanced_architecture_demo.py  enhanced_real_time_demo.py  llm_config_example.py  ollama_llama2_demo.py  phase1_monitoring_demo.py  real_ollama_test.py  simple_ollama_main.py
src/: __init__.py  main.py
src/agents/: __init__.py  agent_factory.py  async_agents.py
src/config/: __init__.py  llm_config.py  validators.py
src/core/: __init__.py  crew_manager.py  settings.py
src/models/: __init__.py  agent_models.py  task_models.py
src/monitoring/: __init__.py  health_checker.py  logger.py  metrics_collector.py  real_time_monitor.py
src/services/: __init__.py  agent_service.py  task_service.py
src/tasks/: __init__.py  task_factory.py
src/utils/: __init__.py  context7_integration.py  environment.py
tests/: test_enhanced_config.py  test_llm.py  test_main.py
