[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicrewdev"
version = "0.1.0"
description = "AI-powered development team simulator"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "crewai>=0.1.0",
    "langchain>=0.1.0",
    "langchain_community>=0.0.10",
    "langchain_core>=0.1.0",
    "langchain_openai>=0.0.5",
    "langchain_anthropic>=0.1.1",
    "langchain_ollama>=0.1.1",
    "python-dotenv>=1.0.0",
]
